[package]
name = "rs-concepts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello-world"
path = "src/hello-world.rs"

[[bin]]
name = "stdio"
path = "src/stdio.rs"

[[bin]]
name = "guessing-game"
path = "src/guessing-game.rs"

[[bin]]
name = "variables"
path = "src/variables.rs"

[[bin]]
name = "data-types"
path = "src/data-types.rs"

[[bin]]
name = "arrays"
path = "src/arrays.rs"

[dependencies]
rand = "0.8.5"